[FEATURE] Support for Frontend Editing (#249)
* [TASK] Require friendsoftypo3/frontend-editing

* [TASK] Remove suggest for Frontend Editing

It's now required.

* [TASK] First implementation of Frontend Editing in templates

* [TASK] Insert UID in data for headers in footer

* [BUGFIX] Property name

* [TASK] Disable streched link when frontend editing is enabled

* [TASK] Use t3kit view helper wrappers for frontend_editing

* [TASK] Only suggest frontend_editing

* [TASK] Adding "duplicated" conditions back in

--- a/Resources/Private/Partials/ContentElements/Header/Render/SubHeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/SubHeaderText.html
@@ -4,32 +4,44 @@
   <f:switch expression="{header_layout}">
     <f:case value="1">
       <h2 class="{header_position} {subheader_style} subheader-text-item">
-        <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+          <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        </t3kit:contentEditable>
       </h2>
     </f:case>
     <f:case value="2">
       <h3 class="{header_position} {subheader_style} subheader-text-item">
-        <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+          <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        </t3kit:contentEditable>
       </h3>
     </f:case>
     <f:case value="3">
       <h4 class="{header_position} {subheader_style} subheader-text-item">
-        <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+          <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        </t3kit:contentEditable>
       </h4>
     </f:case>
     <f:case value="4">
       <h5 class="{header_position} {subheader_style} subheader-text-item">
-        <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+          <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        </t3kit:contentEditable>
       </h5>
     </f:case>
     <f:case value="5">
       <h6 class="{header_position} {subheader_style} subheader-text-item">
-        <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+          <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        </t3kit:contentEditable>
       </h6>
     </f:case>
     <f:case value="6">
       <h6 class="{header_position} {subheader_style} subheader-text-item">
-        <small><f:format.nl2br>{subheader_text}</f:format.nl2br></small>
+        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+          <f:format.nl2br>{subheader_text}</f:format.nl2br>
+        </t3kit:contentEditable>
       </h6>
     </f:case>
   </f:switch>
