--- a/Resources/Private/Partials/ContentElements/Bodytext/Render/Bodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/Render/Bodytext.html
@@ -4,8 +4,12 @@
   <f:variable name="position">text-{bodytext_position}</f:variable>
 </f:if>
 
-<f:if condition="{bodytext}">
-  <p class="bodytext-partial {position}"><f:format.nl2br>{bodytext}</f:format.nl2br></p>
+<f:if condition="{bodytext} || {t3kit:isPlaceholderEnabled()}">
+  <p class="bodytext-partial {position}">
+    <t3kit:contentEditable table="tt_content" field="bodytext" uid="{uid}">
+      <f:format.nl2br>{bodytext}</f:format.nl2br>
+    </t3kit:contentEditable>
+  </p>
 </f:if>
 
 </html>
