--- a/Resources/Private/Partials/ContentElements/Header/All.html
+++ b/Resources/Private/Partials/ContentElements/Header/All.html
@@ -1,21 +1,23 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{data.header_layout} != 100">
-  <f:if condition="{data.header} || {data.subheader} || {data.date}">
-      <f:render partial="Header/Render/Header" arguments="{
-        header: data.header,
-        layout: data.header_layout,
-        style: data.header_style,
-        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
-        link: data.header_link}" />
-      <f:render partial="Header/Render/SubHeader" arguments="{
-        subheader: data.subheader,
-        layout: data.header_layout,
-        subheader_style: data.subheader_style,
-        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
-      <f:render partial="Header/Render/Date" arguments="{
-        date: data.date,
-        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
+  <f:if condition="{data.header} || {data.subheader} || {data.date} || {t3kit:isPlaceholderEnabled()}">
+    <f:render partial="Header/Render/Header" arguments="{
+      uid: data.uid,
+      header: data.header,
+      layout: data.header_layout,
+      style: data.header_style,
+      position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
+      link: data.header_link}" />
+    <f:render partial="Header/Render/SubHeader" arguments="{
+      uid: data.uid,
+      subheader: data.subheader,
+      layout: data.header_layout,
+      subheader_style: data.subheader_style,
+      position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
+    <f:render partial="Header/Render/Date" arguments="{
+      date: data.date,
+      position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
 
