--- a/Resources/Private/Partials/ContentElements/Header/Render/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/Header.html
@@ -1,35 +1,35 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:if condition="{header}">
+<f:if condition="{header} || {t3kit:isPlaceholderEnabled()}">
   <f:switch expression="{layout}">
     <f:case value="1">
       <h1 class="{position} {style} header-item">
-        <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+        <f:link.typolink parameter="{link}"><t3kit:contentEditable table="tt_content" field="header" uid="{uid}">{header}</t3kit:contentEditable></f:link.typolink>
       </h1>
     </f:case>
     <f:case value="2">
       <h2 class="{position} {style} header-item">
-        <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+        <f:link.typolink parameter="{link}"><t3kit:contentEditable table="tt_content" field="header" uid="{uid}">{header}</t3kit:contentEditable></f:link.typolink>
       </h2>
     </f:case>
     <f:case value="3">
       <h3 class="{position} {style} header-item">
-        <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+        <f:link.typolink parameter="{link}"><t3kit:contentEditable table="tt_content" field="header" uid="{uid}">{header}</t3kit:contentEditable></f:link.typolink>
       </h3>
     </f:case>
     <f:case value="4">
       <h4 class="{position} {style} header-item">
-        <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+        <f:link.typolink parameter="{link}"><t3kit:contentEditable table="tt_content" field="header" uid="{uid}">{header}</t3kit:contentEditable></f:link.typolink>
       </h4>
     </f:case>
     <f:case value="5">
       <h5 class="{position} {style} header-item">
-        <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+        <f:link.typolink parameter="{link}"><t3kit:contentEditable table="tt_content" field="header" uid="{uid}">{header}</t3kit:contentEditable></f:link.typolink>
       </h5>
     </f:case>
     <f:case value="6">
       <h6 class="{position} {style} header-item">
-        <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+        <f:link.typolink parameter="{link}"><t3kit:contentEditable table="tt_content" field="header" uid="{uid}">{header}</t3kit:contentEditable></f:link.typolink>
       </h6>
     </f:case>
     <f:case value="100">
