--- a/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
@@ -1,7 +1,8 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:if condition="{data.link_title} || {data.link}">
+<f:if condition="{data.link_title} || {data.link} || {t3kit:isPlaceholderEnabled()}">
   <f:render partial="Link/Render/ButtonLink" arguments="{
+    uid: data.uid,
     link_title: data.link_title,
     accessible_link_label: data.accessible_link_label,
     button_no_bg: data.button_no_bg,
