--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -34,28 +34,28 @@
           <div class="ce-img-text-link__svg-image
             text-{data.header_position} {f:if(condition:height, then: 'fixed-height')}"
             {f:if(condition:height, then: 'style="height: {height}px;"')}>
-            <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: heightd}" />
+            <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: height}" />
           </div>
         </f:if>
 
-        <f:if condition="{data.header}">
+        <f:if condition="{data.header} || {t3kit:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__header">
             <f:render partial="Header/Header" arguments="{_all}" />
           </div>
         </f:if>
-        <f:if condition="{data.subheader}">
+        <f:if condition="{data.subheader} || {t3kit:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__subheader">
             <f:render partial="Header/SubHeader" arguments="{_all}" />
           </div>
         </f:if>
 
-        <f:if condition="{data.bodytext}">
+        <f:if condition="{data.bodytext} || {t3kit:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__bodytext">
             <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
           </div>
         </f:if>
 
-        <f:if condition="{data.link}">
+        <f:if condition="{data.link} || {t3kit:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__link">
             <f:if condition="{data.link_as_button}">
               <f:then>
