[TASK] change class sr-only -> visually-hidden

--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -10,10 +10,10 @@
   <header class="header">
 
     <div class="skip-links">
-      <f:link.typolink parameter="{page.uid}#main-navigation" class="skip-links__item sr-only sr-only-focusable">
+      <f:link.typolink parameter="{page.uid}#main-navigation" class="skip-links__item visually-hidden visually-hidden-focusable">
         {data.skipLinks_mainNavigation}
       </f:link.typolink>
-      <f:link.typolink parameter="{page.uid}#main-content" class="skip-links__item sr-only sr-only-focusable">
+      <f:link.typolink parameter="{page.uid}#main-content" class="skip-links__item visually-hidden visually-hidden-focusable">
         {data.skipLinks_mainContent}
       </f:link.typolink>
     </div>
