--- a/Resources/Private/Partials/ContentElements/Nav/ScrollToTop.html
+++ b/Resources/Private/Partials/ContentElements/Nav/ScrollToTop.html
@@ -8,7 +8,7 @@
           <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 01.708 0l6 6a.5.5 0 01-.708.708L8 5.707l-5.646 5.647a.5.5 0 01-.708-.708l6-6z" clip-rule="evenodd"/>
         </svg>
       </div>
-      <span class="scroll-to-top__text sr-only">
+      <span class="scroll-to-top__text visually-hidden">
         <f:translate key="scroll_to_top" extensionName="t3kit" />
       </span>
     </a>
