--- a/Resources/Private/Partials/Page/Nav/SkipLinks.html
+++ b/Resources/Private/Partials/Page/Nav/SkipLinks.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <div class="skip-link__wrp">
-  <a href="#main" class="skip-link sr-only-focusable">
+  <a href="#main" class="skip-link visually-hidden-focusable">
     <f:translate key="skip_to_main_content" extensionName="t3kit" />
   </a>
 </div>
