[TASK] add sticky-header

--- a/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
@@ -6,13 +6,13 @@
 
 <f:section name="Main">
 
-  <header class="header ce-simple-site-header">
+  <div class="ce-simple-site-header">
     <div class="ce-simple-site-header__main-navigation-wrp">
 
       <f:render section="mainNavigation" arguments="{_all}" />
 
     </div>
-  </header>
+  </div>
 
 </f:section>
 
