--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -6,7 +6,7 @@
 
 <f:section name="Main">
 
-  <footer class="footer ce-site-footer">
+  <div class=" ce-site-footer">
     <div class="ce-site-footer__container
       {f:if(condition: flexform.footer_full_width, then: ' container-fluid', else: ' container')}">
 
@@ -145,7 +145,7 @@
       </div>
 
     </div>
-  </footer>
+  </div>
 
 </f:section>
 
