--- a/theme/src/scss/content-elements/simple-site-header.scss
+++ b/theme/src/scss/content-elements/simple-site-header.scss
@@ -229,7 +229,6 @@
   color: var(--t3-ce-header-nav-dropdown-color);
   text-align: inherit;
   text-decoration: none;
-  white-space: nowrap;
   background-color: transparent;
   border: 0;
 }
@@ -258,6 +257,12 @@
 
 .main-navigation__dropdown-item-list.show {
   display: block;
+}
+
+.header.simple-site-header.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 // --------------------------------------------------------
