--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -370,6 +370,10 @@ select {
   text-transform: none;
 }
 
+[role=button] {
+  cursor: pointer;
+}
+
 select {
   word-wrap: normal;
 }
@@ -478,40 +482,13 @@ progress {
   display: none !important;
 }
 
-.container {
-  width: 100%;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  margin-right: auto;
-  margin-left: auto;
-}
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1320px;
-  }
-}
-
-.container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
   width: 100%;
   padding-right: 1rem;
   padding-left: 1rem;
@@ -564,7 +541,6 @@ progress {
 
 .col {
   flex: 1 0 0%;
-  min-width: 0;
 }
 
 .row-cols-auto > * {
@@ -774,7 +750,6 @@ progress {
 @media (min-width: 576px) {
   .col-sm {
     flex: 1 0 0%;
-    min-width: 0;
   }
 
   .row-cols-sm-auto > * {
@@ -988,7 +963,6 @@ progress {
 @media (min-width: 768px) {
   .col-md {
     flex: 1 0 0%;
-    min-width: 0;
   }
 
   .row-cols-md-auto > * {
@@ -1202,7 +1176,6 @@ progress {
 @media (min-width: 992px) {
   .col-lg {
     flex: 1 0 0%;
-    min-width: 0;
   }
 
   .row-cols-lg-auto > * {
@@ -1416,7 +1389,6 @@ progress {
 @media (min-width: 1200px) {
   .col-xl {
     flex: 1 0 0%;
-    min-width: 0;
   }
 
   .row-cols-xl-auto > * {
@@ -1630,7 +1602,6 @@ progress {
 @media (min-width: 1400px) {
   .col-xxl {
     flex: 1 0 0%;
-    min-width: 0;
   }
 
   .row-cols-xxl-auto > * {
@@ -1946,8 +1917,8 @@ progress {
     z-index: 1020;
   }
 }
-.sr-only,
-.sr-only-focusable:not(:focus) {
+.visually-hidden,
+.visually-hidden-focusable:not(:focus) {
   position: absolute !important;
   width: 1px !important;
   height: 1px !important;
@@ -2019,10 +1990,6 @@ progress {
   overflow: hidden !important;
 }
 
-.d-none {
-  display: none !important;
-}
-
 .d-inline {
   display: inline !important;
 }
@@ -2053,6 +2020,10 @@ progress {
 
 .d-inline-flex {
   display: inline-flex !important;
+}
+
+.d-none {
+  display: none !important;
 }
 
 .shadow {
@@ -2141,11 +2112,11 @@ progress {
 }
 
 .border-success {
-  border-color: #28a745 !important;
+  border-color: #198754 !important;
 }
 
 .border-info {
-  border-color: #17a2b8 !important;
+  border-color: #0dcaf0 !important;
 }
 
 .border-warning {
@@ -2166,6 +2137,30 @@ progress {
 
 .border-white {
   border-color: #fff !important;
+}
+
+.border-0 {
+  border-width: 0 !important;
+}
+
+.border-1 {
+  border-width: 1px !important;
+}
+
+.border-2 {
+  border-width: 2px !important;
+}
+
+.border-3 {
+  border-width: 3px !important;
+}
+
+.border-4 {
+  border-width: 4px !important;
+}
+
+.border-5 {
+  border-width: 5px !important;
 }
 
 .w-25 {
@@ -2298,6 +2293,10 @@ progress {
 
 .justify-content-around {
   justify-content: space-around !important;
+}
+
+.justify-content-evenly {
+  justify-content: space-evenly !important;
 }
 
 .align-items-start {
@@ -2993,11 +2992,11 @@ progress {
 }
 
 .text-success {
-  color: #28a745 !important;
+  color: #198754 !important;
 }
 
 .text-info {
-  color: #17a2b8 !important;
+  color: #0dcaf0 !important;
 }
 
 .text-warning {
@@ -3065,11 +3064,11 @@ progress {
 }
 
 .bg-success {
-  background-color: #28a745 !important;
+  background-color: #198754 !important;
 }
 
 .bg-info {
-  background-color: #17a2b8 !important;
+  background-color: #0dcaf0 !important;
 }
 
 .bg-warning {
@@ -3134,6 +3133,7 @@ progress {
 
 .text-break {
   word-wrap: break-word !important;
+  word-break: break-word !important;
 }
 
 .font-monospace {
@@ -3228,10 +3228,6 @@ progress {
     float: none !important;
   }
 
-  .d-sm-none {
-    display: none !important;
-  }
-
   .d-sm-inline {
     display: inline !important;
   }
@@ -3262,6 +3258,10 @@ progress {
 
   .d-sm-inline-flex {
     display: inline-flex !important;
+  }
+
+  .d-sm-none {
+    display: none !important;
   }
 
   .flex-sm-fill {
@@ -3330,6 +3330,10 @@ progress {
 
   .justify-content-sm-around {
     justify-content: space-around !important;
+  }
+
+  .justify-content-sm-evenly {
+    justify-content: space-evenly !important;
   }
 
   .align-items-sm-start {
@@ -3997,10 +4001,6 @@ progress {
     float: none !important;
   }
 
-  .d-md-none {
-    display: none !important;
-  }
-
   .d-md-inline {
     display: inline !important;
   }
@@ -4031,6 +4031,10 @@ progress {
 
   .d-md-inline-flex {
     display: inline-flex !important;
+  }
+
+  .d-md-none {
+    display: none !important;
   }
 
   .flex-md-fill {
@@ -4099,6 +4103,10 @@ progress {
 
   .justify-content-md-around {
     justify-content: space-around !important;
+  }
+
+  .justify-content-md-evenly {
+    justify-content: space-evenly !important;
   }
 
   .align-items-md-start {
@@ -4766,10 +4774,6 @@ progress {
     float: none !important;
   }
 
-  .d-lg-none {
-    display: none !important;
-  }
-
   .d-lg-inline {
     display: inline !important;
   }
@@ -4800,6 +4804,10 @@ progress {
 
   .d-lg-inline-flex {
     display: inline-flex !important;
+  }
+
+  .d-lg-none {
+    display: none !important;
   }
 
   .flex-lg-fill {
@@ -4868,6 +4876,10 @@ progress {
 
   .justify-content-lg-around {
     justify-content: space-around !important;
+  }
+
+  .justify-content-lg-evenly {
+    justify-content: space-evenly !important;
   }
 
   .align-items-lg-start {
@@ -5535,10 +5547,6 @@ progress {
     float: none !important;
   }
 
-  .d-xl-none {
-    display: none !important;
-  }
-
   .d-xl-inline {
     display: inline !important;
   }
@@ -5569,6 +5577,10 @@ progress {
 
   .d-xl-inline-flex {
     display: inline-flex !important;
+  }
+
+  .d-xl-none {
+    display: none !important;
   }
 
   .flex-xl-fill {
@@ -5637,6 +5649,10 @@ progress {
 
   .justify-content-xl-around {
     justify-content: space-around !important;
+  }
+
+  .justify-content-xl-evenly {
+    justify-content: space-evenly !important;
   }
 
   .align-items-xl-start {
@@ -6304,10 +6320,6 @@ progress {
     float: none !important;
   }
 
-  .d-xxl-none {
-    display: none !important;
-  }
-
   .d-xxl-inline {
     display: inline !important;
   }
@@ -6338,6 +6350,10 @@ progress {
 
   .d-xxl-inline-flex {
     display: inline-flex !important;
+  }
+
+  .d-xxl-none {
+    display: none !important;
   }
 
   .flex-xxl-fill {
@@ -6406,6 +6422,10 @@ progress {
 
   .justify-content-xxl-around {
     justify-content: space-around !important;
+  }
+
+  .justify-content-xxl-evenly {
+    justify-content: space-evenly !important;
   }
 
   .align-items-xxl-start {
@@ -7061,10 +7081,6 @@ progress {
   }
 }
 @media print {
-  .d-print-none {
-    display: none !important;
-  }
-
   .d-print-inline {
     display: inline !important;
   }
@@ -7095,6 +7111,10 @@ progress {
 
   .d-print-inline-flex {
     display: inline-flex !important;
+  }
+
+  .d-print-none {
+    display: none !important;
   }
 }
 .fade {
@@ -9577,7 +9597,6 @@ fieldset:disabled .btn {
   color: var(--t3-ce-header-nav-dropdown-color);
   text-align: inherit;
   text-decoration: none;
-  white-space: nowrap;
   background-color: transparent;
   border: 0;
 }
@@ -9606,6 +9625,13 @@ fieldset:disabled .btn {
 
 .main-navigation__dropdown-item-list.show {
   display: block;
+}
+
+.header.simple-site-header.sticky-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 @media (min-width: 992px) {
