[FEATURE] add sticky-header option

--- a/theme/src/scss/content-elements/simple-site-header.scss
+++ b/theme/src/scss/content-elements/simple-site-header.scss
@@ -259,7 +259,7 @@
   display: block;
 }
 
-.header.simple-site-header.sticky-header {
+.header.site-header.sticky-header {
   position: sticky;
   top: 0;
   z-index: 1;
