[TASK] WCAG 1.3.1, add role and aria-label to SkipLinks

--- a/Resources/Private/Partials/Page/Nav/SkipLinks.html
+++ b/Resources/Private/Partials/Page/Nav/SkipLinks.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<div class="skip-link__wrp">
+<div class="skip-link__wrp" role="navigation" aria-label="{f:translate(key: 'skip_to_main_content', extensionName: 't3kit')}">
   <a href="#main" class="skip-link visually-hidden-focusable">
     <f:translate key="skip_to_main_content" extensionName="t3kit" />
   </a>
