--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -3,9 +3,13 @@
 <f:render partial="Css/Maincss" arguments="{_all}" />
 <f:render partial="Js/Mainjs" arguments="{_all}" />
 
+<!--TYPO3SEARCH_begin-->
+
 <f:render partial="Nav/SkipLinks" arguments="{_all}" />
 <div id="top"></div>
 
 <f:render section="Main" />
+
+<!--TYPO3SEARCH_end-->
 
 </html>
