[TASK] use {site:theme} variable to define page partialRootPaths

--- a/Resources/Private/Templates/ContentElements/Static/Textmedia.html
+++ b/Resources/Private/Templates/ContentElements/Static/Textmedia.html
@@ -34,7 +34,7 @@
     </f:defaultCase>
   </f:switch>
 
-  <div c“lass="ce-textmedia__wrp">
+  <div class="ce-textmedia__wrp">
     <div class="ce-textmedia {var}">
 
       <div class="ce-textmedia__media">
