--- a/Resources/Private/Templates/ContentElements/Static/Textpic.html
+++ b/Resources/Private/Templates/ContentElements/Static/Textpic.html
@@ -34,7 +34,7 @@
     </f:defaultCase>
   </f:switch>
 
-  <div c“lass="ce-textpic__wrp">
+  <div class="ce-textpic__wrp">
     <div class="ce-textpic {var}">
 
       <div class="ce-textpic__picture">
