--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -37,6 +37,7 @@
 @use 'content-elements/quote';
 @use 'content-elements/divider-icon';
 @use 'content-elements/divider';
+@use 'content-elements/image-text-left-right';
 
 // ===== appearance =====
 @use 'appearance/color';
