--- a/Resources/Private/Partials/PageLayout/Record/slider/Preview.html
+++ b/Resources/Private/Partials/PageLayout/Record/slider/Preview.html
@@ -1,10 +1,3 @@
-<p>
-  <strong>
-    <f:format.nl2br>{item.record.header_text}</f:format.nl2br>
-  </strong>
-</p>
-{item.preview -> f:format.raw()}
-<p class="t3kit-ce-subheader">
-  <f:format.nl2br>{item.record.subheader_text}</f:format.nl2br>
-</p>
-<f:format.nl2br>{item.record.bodytext}</f:format.nl2br>
+<div class="t3kit-preview-wrp">
+  {item.preview -> f:format.raw()}
+</div>
