--- a/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
+++ b/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
@@ -28,9 +28,9 @@
           <div class="swiper-slide{f:if(condition: iteration.isFirst,then:' active')}">
             <div class="ce-slider__caption-wrp container" {f:if(condition:height, then: 'style="height: {height}px;"')}>
               <div class="ce-slider__caption">
-                <f:if condition="{item.data.header} || {t3kit:isPlaceholderEnabled()}">
+                <f:if condition="{item.data.header_text} || {t3kit:isPlaceholderEnabled()}">
                   <div class="ce-slider__caption-header">
-                    <f:render partial="Header/Header" arguments="{data: item.data}" />
+                    <f:render partial="Header/HeaderText" arguments="{data: item.data}" />
                   </div>
                 </f:if>
 
@@ -62,7 +62,7 @@
             </div>
             <f:if condition="{item.files}">
               <div class="ce-slider__picture">
-                <f:render partial="Media/Type" arguments="{files: item.files}" />
+                <f:render partial="Media/Type" arguments="{files: item.files, data: data, height: height}" />
               </div>
             </f:if>
           </div>
@@ -75,8 +75,6 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
 
-      <!-- If we need scrollbar -->
-      <div class="swiper-scrollbar"></div>
   </div>
 
 </f:section>
