--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLeftRight.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLeftRight.html
@@ -7,23 +7,25 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/ImageTextLeftRight.html [begin] -->
 
-<f:if condition="{flexform.image_height}">
-  <f:variable name="height">{flexform.image_height}</f:variable>
+<f:if condition="{flexform.image_height} == 0">
+  <f:then>
+    <f:variable name="height">400</f:variable>
+  </f:then>
+  <f:else>
+    <f:variable name="height">{flexform.image_height}</f:variable>
+  </f:else>
 </f:if>
 
-<f:if condition="{flexform.stretched_link}">
-  <f:variable name="stretched_link" value="1" />
-</f:if>
+<f:variable name="width">{flexform.image_width}</f:variable>
 
-<div class="ce-img-text-left-right__wrp ce-img-text-left-right--{flexform.image_alignment}
-  {f:if(condition: flexform.internal_margins, then: ' internal-margins')}
-  {f:if(condition: flexform.inverted_color, then: ' inverted-color')}">
+<div class="ce-img-text-left-right__wrp ce-img-text-left-right--{flexform.image_alignment}">
 
   <div class="ce-img-text-left-right">
 
     <f:if condition="{svg_image}">
       <div class="ce-img-text-left-right__svg-image-wrp">
-        <div class="ce-img-text-left-right__svg-image"
+        <div class="ce-img-text-left-right__svg-image
+          text-{data.header_position} {f:if(condition:height, then: 'fixed-height')}"
           {f:if(condition:height, then: 'style="height: {height}px;"')}>
           <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: height}" />
         </div>
@@ -32,9 +34,9 @@
 
     <f:if condition="{files}">
       <div class="ce-img-text-left-right__picture-wrp">
-        <div class="ce-img-text-left-right__picture"
-          {f:if(condition:height, then: 'style="height: {height}px;"')}>
-            <f:render partial="Media/Type" arguments="{_all}" />
+        <div class="ce-img-text-left-right__picture {f:if(condition:height, then: 'fixed-height')}"
+        {f:if(condition:height, then: 'style="height: {height}px;"')}>
+          <f:render partial="Media/Type" arguments="{_all}" />
         </div>
       </div>
     </f:if>
