--- a/Resources/Private/Partials/PageLayout/Record/slider/Footer.html
+++ b/Resources/Private/Partials/PageLayout/Record/slider/Footer.html
@@ -1,3 +1,3 @@
-<p class="t3kit-ce-footer t3kit-ce-footer--static">
+<p class="t3kit-ce-footer t3kit-ce-footer--dynamic">
   {item.record.CType}
 </p>
