--- a/theme/src/scss/content-elements/slider.scss
+++ b/theme/src/scss/content-elements/slider.scss
@@ -5,6 +5,10 @@
   --t3-ce-slider-bodytext-width: 100%;
   --t3-ce-slider-min-height-on-mobile: 460px;
   --t3-ce-slider-controls: var(--t3-primary);
+  --t3-ce-slider-primary-overlay: hsla(var(--t3-primary-hs), var(--t3-primary-l), 0.4);
+  --t3-ce-slider-secondary-overlay: hsla(var(--t3-secondary-hs), var(--t3-secondary-l), 0.4);
+  --t3-ce-slider-light-overlay: hsla(var(--t3-light-hs), var(--t3-light-l), 0.4);
+  --t3-ce-slider-dark-overlay: hsla(var(--t3-dark-hs), var(--t3-dark-l), 0.4);
 }
 
 .ce-slider__caption-wrp {
@@ -24,6 +28,10 @@
   z-index: -1;
   width: 100%;
   height: 100%;
+}
+
+.ce-slider .swiper-slide-active {
+  z-index: auto;
 }
 
 .ce-slider__caption-header .header-item {
@@ -46,6 +54,43 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+}
+
+// slider image overlay
+.swiper-slide.overlay-primary {
+  background-color: var(--t3-ce-slider-primary-overlay);
+}
+
+.swiper-slide.overlay-primary .picture-partial__item-img {
+  background-color: hsl(var(--t3-primary-hs), calc(var(--t3-primary-l) - 30%));
+}
+
+.swiper-slide.overlay-secondary {
+  background-color: var(--t3-ce-slider-secondary-overlay);
+}
+
+.swiper-slide.overlay-secondary .picture-partial__item-img {
+  background-color: hsl(var(--t3-secondary-hs), calc(var(--t3-secondary-l) - 30%));
+}
+
+.swiper-slide.overlay-dark {
+  background-color: var(--t3-ce-slider-dark-overlay);
+}
+
+.swiper-slide.overlay-dark .picture-partial__item-img {
+  background-color: hsl(var(--t3-dark-hs), calc(var(--t3-dark-l) - 20%));
+}
+
+.swiper-slide.overlay-light {
+  background-color: var(--t3-ce-slider-light-overlay);
+}
+
+.swiper-slide.overlay-light .picture-partial__item-img {
+  background-color: hsl(var(--t3-light-hs), calc(var(--t3-light-l) - 70%));
+}
+
+.swiper-slide.overlay-disable .picture-partial__item-img {
+  background-color: hsl(var(--t3-dark-hs), calc(var(--t3-dark-l) - 20%));
 }
 
 // --------------------------------------------------------
