[BUGFIX] remove extra </html> tag

--- a/Resources/Private/Partials/ContentElements/Link/Render/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/Render/ButtonLink.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true"></html>
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:variable name="btn_class">btn</f:variable>
 <f:if condition="{button_no_bg}">
