--- a/Resources/Private/Partials/ContentElements/Bodytext/Render/Bodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/Render/Bodytext.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true"></html>
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{bodytext_position}">
   <f:variable name="position">text-{bodytext_position}</f:variable>
