--- a/Resources/Private/Partials/ContentElements/Bodytext/Render/RTEBodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/Render/RTEBodytext.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true"></html>
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <t3kit:contentEditable table="tt_content" field="bodytext" uid="{uid}">
   <f:format.html>{bodytext}</f:format.html>
