[BUGFIX] fix HTML CE, use f:format.raw

--- a/Resources/Private/Templates/ContentElements/Special/Html.html
+++ b/Resources/Private/Templates/ContentElements/Special/Html.html
@@ -6,9 +6,7 @@
 
 <f:section name="Main">
 
-  <f:if condition="{data.bodytext}">
-    <f:render partial="Bodytext/RTEBodytext" arguments="{_all}" />
-  </f:if>
+  <f:format.raw>{data.bodytext}</f:format.raw>
 
 </f:section>
 
