--- a/theme/src/css/main/content-elements/textpic.css
+++ b/theme/src/css/main/content-elements/textpic.css
@@ -47,12 +47,24 @@
   flex-direction: column;
 }
 
-.text-img-left,
-.text-img-right {
-  .ce-textpic__picture,
-  .ce-textpic__text {
-    padding: 0 1rem;
-  }
+.text-img-left .ce-textpic__picture {
+  padding: 0;
+  padding-right: 1rem;
+}
+
+.text-img-right .ce-textpic__picture {
+  padding: 0;
+  padding-left: 1rem;
+}
+
+.text-img-left .ce-textpic__text {
+  padding: 0;
+  padding-left: 1rem;
+}
+
+.text-img-right .ce-textpic__text {
+  padding: 0;
+  padding-right: 1rem;
 }
 
 /* -------------------------------------------------------- */
