--- a/Resources/Private/Templates/ContentElements/Plugin/List.html
+++ b/Resources/Private/Templates/ContentElements/Plugin/List.html
@@ -4,7 +4,9 @@
 
 <f:section name="Main">
 
-  <f:cObject typoscriptObjectPath="tt_content.list.20.{data.list_type}" data="{data}" table="tt_content" />
+  <f:if condition="{data.list_type}">
+    <f:cObject typoscriptObjectPath="tt_content.list.20.{data.list_type}" data="{data}" table="tt_content" />
+  </f:if>
 
 </f:section>
 
