--- a/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
@@ -129,7 +129,7 @@
       The image element inside the content with a fluid/full-screen width. 100% width based on the Bootstrap grid.
       Lower performance, but with the ability to design site with a full-screen layout. </f:comment>
 
-    <f:variable name="big_viewport_width">{fluid_viewport_width}vm</f:variable>
+    <f:variable name="big_viewport_width">{fluid_viewport_width}vw</f:variable>
   </f:else>
 </f:if>
 
