--- a/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
@@ -7,6 +7,9 @@
 <f:section name="Main">
 
   <div class="ce-simple-site-header">
+
+    <f:render partial="Nav/SkipLinks" arguments="{_all}" />
+
     <div class="ce-simple-site-header__main-navigation-wrp">
 
       <f:render section="mainNavigation" arguments="{_all}" />
