--- a/Resources/Private/Partials/ContentElements/Media/Render/Svg.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Svg.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{file.alternative}">
-  <f:variable name="role" value="{role: 'img'}" />
+  <f:variable name="svg-attr" value="{role: 'img', aria-label: '{file.alternative}'}" />
 </f:if>
 
 <f:image class="svg-partial__item svg-fluid"
@@ -9,7 +9,7 @@
   width="{file.referenceProperties.svg_width}m"
   minWidth="{file.referenceProperties.svg_width}"
   alt="{file.alternative}"
-  additionalAttributes="{role}"
+  additionalAttributes="{svg-attr}"
   loading="lazy" />
 
 </html>
