[TASK] re-add default classes for slider, but keep unique aswell

--- a/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
+++ b/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
@@ -20,7 +20,7 @@
   </f:if>
 
   <!-- Slider main container -->
-  <div class="ce-slider__wrp t3kit-swiper-container {container}">
+  <div class="ce-slider__wrp swiper-container t3kit-swiper-container {container}">
       <!-- Additional required wrapper -->
       <div class="ce-slider swiper-wrapper">
           <!-- Slides -->
@@ -69,11 +69,11 @@
         </f:for>
       </div>
       <!-- If we need pagination -->
-      <div class="t3kit-swiper-pagination"></div>
+      <div class="swiper-pagination t3kit-swiper-pagination"></div>
 
       <!-- If we need navigation buttons -->
-      <div class="t3kit-swiper-button-prev"></div>
-      <div class="t3kit-swiper-button-next"></div>
+      <div class="swiper-button-prev t3kit-swiper-button-prev"></div>
+      <div class="swiper-button-next t3kit-swiper-button-next"></div>
 
   </div>
 
