[BUGFIX] add the possibility to have only one link for the page in a column in site footer CE

--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -57,7 +57,7 @@
           <div class="col-lg-9">
           <nav class="footer-site-navigation row" aria-label="Site">
 
-            <f:if condition="{links_1.1}">
+            <f:if condition="{links_1}">
               <div class="col-lg">
 
                 <div class="ce-site-footer__column">
@@ -79,7 +79,7 @@
               </div>
             </f:if>
 
-            <f:if condition="{links_2.1}">
+            <f:if condition="{links_2}">
               <div class="col-lg">
 
                 <div class="ce-site-footer__column">
@@ -101,7 +101,7 @@
               </div>
             </f:if>
 
-            <f:if condition="{links_3.1}">
+            <f:if condition="{links_3}">
               <div class="col-lg">
 
                 <div class="ce-site-footer__column">
@@ -137,7 +137,7 @@
             </div>
           </div>
         </f:if>
-        <f:if condition="{bottom_links.1}">
+        <f:if condition="{bottom_links}">
             <div class="ce-site-footer__bottom-links">
               <f:render section="links" arguments="{links: bottom_links, flexform: flexform}" />
             </div>
