--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -7576,25 +7576,26 @@ fieldset:disabled .btn {
 }
 .text-img-left .ce-textpic__picture {
   padding: 0;
-  padding-right: 1rem;
 }
 .text-img-right .ce-textpic__picture {
   padding: 0;
-  padding-left: 1rem;
 }
 .text-img-left .ce-textpic__text {
   padding: 0;
-  padding-left: 1rem;
 }
 .text-img-right .ce-textpic__text {
   padding: 0;
-  padding-right: 1rem;
 }
 /* -------------------------------------------------------- */
 /* X-Small devices (portrait phones, less than 576px) xs */
 /* @media (max-width: 575.98px) { ... } */
 /* Small devices (landscape phones, 576px and up) sm */
-@media (min-width: 576px) {
+/* @media (min-width: 576px) { ... } */
+/* -------------------------------------------------------- */
+/* Small devices (landscape phones, less than 768px) sm */
+/* @media (max-width: 767.98px) { ... } */
+/* Medium devices (tablets, 768px and up) md */
+@media (min-width: 768px) {
   .text-img-left {
     flex-direction: row;
   }
@@ -7602,12 +7603,23 @@ fieldset:disabled .btn {
   .text-img-right {
     flex-direction: row-reverse;
   }
+
+  .text-img-left .ce-textpic__picture {
+    padding-right: 1rem;
+  }
+
+  .text-img-right .ce-textpic__picture {
+    padding-left: 1rem;
+  }
+
+  .text-img-left .ce-textpic__text {
+    padding-left: 1rem;
+  }
+
+  .text-img-right .ce-textpic__text {
+    padding-right: 1rem;
+  }
 }
-/* -------------------------------------------------------- */
-/* Small devices (landscape phones, less than 768px) sm */
-/* @media (max-width: 767.98px) { ... } */
-/* Medium devices (tablets, 768px and up) md */
-/* @media (min-width: 768px) { ... } */
 /* -------------------------------------------------------- */
 /* Medium devices (tablets, less than 992px) md */
 /* @media (max-width: 991.98px) { ... } */
