--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -7595,7 +7595,12 @@ fieldset:disabled .btn {
 /* Small devices (landscape phones, less than 768px) sm */
 /* @media (max-width: 767.98px) { ... } */
 /* Medium devices (tablets, 768px and up) md */
-@media (min-width: 768px) {
+/* @media (min-width: 768px) { ... } */
+/* -------------------------------------------------------- */
+/* Medium devices (tablets, less than 992px) md */
+/* @media (max-width: 991.98px) { ... } */
+/* Large devices (desktops, 992px and up) lg */
+@media (min-width: 992px) {
   .text-img-left {
     flex-direction: row;
   }
@@ -7619,12 +7624,12 @@ fieldset:disabled .btn {
   .text-img-right .ce-textpic__text {
     padding-right: 1rem;
   }
+
+  .text-img-right .picture-partial__item-img,
+  .text-img-left .picture-partial__item-img {
+    width: auto;
+  }
 }
-/* -------------------------------------------------------- */
-/* Medium devices (tablets, less than 992px) md */
-/* @media (max-width: 991.98px) { ... } */
-/* Large devices (desktops, 992px and up) lg */
-/* @media (min-width: 992px) { ... } */
 /* -------------------------------------------------------- */
 /* Large devices (desktops, less than 1200px) lg */
 /* @media (max-width: 1199.98px) { ... } */
