--- a/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
@@ -163,6 +163,18 @@
   </f:else>
 </f:if>
 
+<f:if condition="{picture_width} != 100">
+  <f:asset.css identifier="picture-uid-{image.uid}">
+    .picture-uid-{image.uid} { width: {small_viewport_width}vw; }
+    @media (min-width: 992px) {
+      .picture-uid-{image.uid} { width: {medium_viewport_width}; }
+    }
+    @media (min-width: {container_width}px) {
+      .picture-uid-{image.uid} { width: {big_viewport_width}; }
+    }
+  </f:asset.css>
+</f:if>
+
 <f:if condition="{height}">
 
   <f:then>
@@ -193,11 +205,12 @@
           {f:uri.image(image: image, width: '1920', height: '{picture_height}', cropVariant: 'default')} 1920w"
         sizes="(min-width: {container_width}px) {big_viewport_width}, {medium_viewport_width}">
 
-        <f:image class="picture-partial__item-img img-fluid figure-img {image.referenceProperties.picture_border_radius}"
-          image="{image}"
-          alt="{image.alternative}"
-          cropVariant="default"
-          loading="lazy" />
+      <f:image
+        class="picture-partial__item-img img-fluid figure-img {image.referenceProperties.picture_border_radius} picture-width-{picture_width} picture-uid-{image.uid} picture-height-{height}"
+        image="{image}"
+        alt="{image.alternative}"
+        cropVariant="default"
+        loading="lazy" />
     </picture>
   </f:then>
 
@@ -228,11 +241,12 @@
           {f:uri.image(image: image, maxWidth: '1920', cropVariant: 'default')} 1920w"
         sizes="(min-width: {container_width}px) {big_viewport_width}, {medium_viewport_width}">
 
-        <f:image class="picture-partial__item-img img-fluid figure-img {image.referenceProperties.picture_border_radius}"
-          image="{image}"
-          alt="{image.alternative}"
-          cropVariant="default"
-          loading="lazy" />
+      <f:image
+        class="picture-partial__item-img img-fluid figure-img {image.referenceProperties.picture_border_radius} picture-width-{picture_width} picture-uid-{image.uid}"
+        image="{image}"
+        alt="{image.alternative}"
+        cropVariant="default"
+        loading="lazy" />
     </picture>
   </f:else>
 
