--- a/theme/src/css/main/content-elements/textpic.css
+++ b/theme/src/css/main/content-elements/textpic.css
@@ -35,7 +35,7 @@
 .text-img-above-right,
 .text-img-above-center,
 .text-img-left {
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 .text-img-left .ce-textpic__picture {
