--- a/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
@@ -96,22 +96,31 @@
 
 
 <f:comment>
-  Calculate picture_width based on selector or width variable in BE to define relative image width inside a content element
+  Calculate picture_width based on selector {image.referenceProperties.picture_width} or width variable in CE fluid template to define relative image width inside a content element
 </f:comment>
 <f:if condition="{width}">
   <f:then>
     <f:variable name="picture_width">{width}</f:variable>
+    <f:if condition="{mobile_width}">
+      <f:then>
+        <f:variable name="picture_mobile_width">{mobile_width}</f:variable>
+      </f:then>
+      <f:else>
+        <f:variable name="picture_mobile_width">100</f:variable>
+      </f:else>
+    </f:if>
   </f:then>
   <f:else>
     <f:variable name="picture_width">{image.referenceProperties.picture_width}</f:variable>
+    <f:variable name="picture_mobile_width">{picture_width}</f:variable>
   </f:else>
 </f:if>
 
 
 <f:if condition="{picture_width} != 100 && {data.CType} != textpic">
-  <f:variable name="fluid_viewport_width">{image.referenceProperties.picture_width*fluid_viewport_width/100}</f:variable>
-  <f:variable name="fixed_viewport_width">{image.referenceProperties.picture_width*fixed_viewport_width/100}</f:variable>
-  <f:variable name="small_viewport_width">{image.referenceProperties.picture_width*small_viewport_width/100}</f:variable>
+  <f:variable name="fluid_viewport_width">{picture_width*fluid_viewport_width/100}</f:variable>
+  <f:variable name="fixed_viewport_width">{picture_width*fixed_viewport_width/100}</f:variable>
+  <f:variable name="small_viewport_width">{picture_mobile_width*small_viewport_width/100}</f:variable>
 </f:if>
 
 
@@ -127,14 +136,14 @@
       </f:if>
       <f:variable name="fluid_viewport_width">{picture_width*fluid_viewport_width/100}</f:variable>
       <f:variable name="fixed_viewport_width">{picture_width*fixed_viewport_width/100}</f:variable>
-      <f:variable name="small_viewport_width">100</f:variable>
+      <f:variable name="small_viewport_width">{picture_mobile_width*2*small_viewport_width/100}</f:variable>
     </f:then>
 
     <f:else>
       <f:if condition="{picture_width} != 100">
-        <f:variable name="fluid_viewport_width">{image.referenceProperties.picture_width*fluid_viewport_width/100}</f:variable>
-        <f:variable name="fixed_viewport_width">{image.referenceProperties.picture_width*fixed_viewport_width/100}</f:variable>
-        <f:variable name="small_viewport_width">{image.referenceProperties.picture_width*small_viewport_width/100}</f:variable>
+        <f:variable name="fluid_viewport_width">{picture_width*fluid_viewport_width/100}</f:variable>
+        <f:variable name="fixed_viewport_width">{picture_width*fixed_viewport_width/100}</f:variable>
+        <f:variable name="small_viewport_width">{picture_mobile_width*small_viewport_width/100}</f:variable>
       </f:if>
     </f:else>
   </f:if>
@@ -163,7 +172,10 @@
   </f:else>
 </f:if>
 
-<f:if condition="{picture_width} != 100">
+<f:comment>
+  define specific image width if it less than 100% by picture_width property
+</f:comment>
+<f:if condition="{image.referenceProperties.picture_width} != 100">
   <f:asset.css identifier="picture-uid-{image.uid}">
     .picture-uid-{image.uid} { width: {small_viewport_width}vw; }
     @media (min-width: 992px) {
