--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -7546,14 +7546,6 @@ fieldset:disabled .btn {
 .text-img-below-left .ce-textpic__picture {
   text-align: left;
 }
-.text-img-above-left .ce-textpic__picture .picture-partial__item-img,
-.text-img-below-left .ce-textpic__picture .picture-partial__item-img,
-.text-img-above-right .ce-textpic__picture .picture-partial__item-img,
-.text-img-below-right .ce-textpic__picture .picture-partial__item-img,
-.text-img-above-center .ce-textpic__picture .picture-partial__item-img,
-.text-img-below-center .ce-textpic__picture .picture-partial__item-img {
-  width: auto;
-}
 .text-img-above-right .ce-textpic__picture,
 .text-img-below-right .ce-textpic__picture {
   text-align: right;
@@ -7572,7 +7564,7 @@ fieldset:disabled .btn {
 .text-img-above-right,
 .text-img-above-center,
 .text-img-left {
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 .text-img-left .ce-textpic__picture {
   padding: 0;
@@ -7623,11 +7615,6 @@ fieldset:disabled .btn {
 
   .text-img-right .ce-textpic__text {
     padding-right: 1rem;
-  }
-
-  .text-img-right .picture-partial__item-img,
-  .text-img-left .picture-partial__item-img {
-    width: auto;
   }
 }
 /* -------------------------------------------------------- */
