[TASK] add textorient field for textpic & textmedia CE-s, add text width auto opt. relative to the content element

--- a/Resources/Private/Templates/ContentElements/Static/Textmedia.html
+++ b/Resources/Private/Templates/ContentElements/Static/Textmedia.html
@@ -35,7 +35,7 @@
   </f:switch>
 
   <div class="ce-textmedia__wrp">
-    <div class="ce-textmedia {var}">
+    <div class="ce-textmedia {var} {data.textorient}">
 
       <div class="ce-textmedia__media">
         <f:render partial="Media/Figure" arguments="{_all}" />
