--- a/Resources/Private/Templates/ContentElements/Static/Textpic.html
+++ b/Resources/Private/Templates/ContentElements/Static/Textpic.html
@@ -35,7 +35,7 @@
   </f:switch>
 
   <div class="ce-textpic__wrp">
-    <div class="ce-textpic {var}">
+    <div class="ce-textpic {var} {data.textorient}">
 
       <div class="ce-textpic__picture">
         <f:render partial="Media/Figure" arguments="{_all}" />
