[BUGFIX] rename responsive embed helpers, bootstrap5, embed-responsive -> ratio, 16by9 -> 16x9

--- a/Resources/Private/Partials/ContentElements/Media/Render/Video.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Video.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<div class="video-partial__item-wrp embed-responsive embed-responsive-{file.referenceProperties.aspect_ratio}">
-  <f:media class="video-partial__item embed-responsive-item" file="{file}" title="{file.title}" additionalConfig="{settings.media.videoConfig}" />
+<div class="video-partial__item-wrp ratio ratio-{file.referenceProperties.aspect_ratio}">
+  <f:media class="video-partial__item" file="{file}" title="{file.title}" additionalConfig="{settings.media.videoConfig}" />
 </div>
 
 </html>
