[BUGFIX] fix textpic/textmedia CE-s, above-left, above-right, above-center position

--- a/theme/src/css/main/content-elements/textmedia.css
+++ b/theme/src/css/main/content-elements/textmedia.css
@@ -33,7 +33,10 @@
 
 .text-media-above-left,
 .text-media-above-right,
-.text-media-above-center,
+.text-media-above-center {
+  flex-direction: column;
+}
+
 .text-media-left {
   flex-direction: column-reverse;
 }
